Add doc for log_temp_files (#2969)
* Add log_temp_files guc

* Add subnav log_temp_files to ditamap

* Add mention of spill files and pg_log

--- a/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
+++ b/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
@@ -191,6 +191,7 @@
             <topicref href="guc-list.xml#log_rotation_size"/>
             <topicref href="guc-list.xml#log_statement"/>
             <topicref href="guc-list.xml#log_statement_stats"/>
+            <topicref href="guc-list.xml#log_temp_files"/>
             <topicref href="guc-list.xml#log_timezone"/>
             <topicref href="guc-list.xml#log_truncate_on_rotation"/>
             <topicref href="guc-list.xml#max_appendonly_tables"/>
