Preliminary update to numbering and supported functions (#3328)
* Preliminary update to numbering and supported functions

* Screenshots for pgAdmin4

* New pgAdmin files and updates

* Fix typo in ditamap

* Resize graphics

* Move graphics to correct level graphics directory, update refs

* Add queryscreen

* Misc reorganization, add Viewing DDL file, map entry.

* Change spurious .dita postfix to .xml

* Specify what is not supported, add additional query content.

* Updates from pull request review

* Updates from Shirley Wang

* Removing sections for unsupported features

* Remove pgAdmin III pages, add link to website.

--- a/gpdb-doc/dita/admin_guide/access_db/access_db.ditamap
+++ b/gpdb-doc/dita/admin_guide/access_db/access_db.ditamap
@@ -7,16 +7,11 @@
   <topicref href="topics/g-supported-client-applications.xml"/>
   <topicref href="topics/g-greenplum-database-client-applications.xml"/>
 
- <topicref href="topics/g-connecting-with-psql.xml"/>
-<!--
- <topicref href="topics/g-pgadmin-iii-for-greenplum-database.xml">
-  <topicref href="topics/g-installing-pgadmin-iii-for-greenplum-database.xml"/>
-  <topicref href="topics/g-documentation-for-pgadmin-iii-for-greenplum-database.xml"/>
-  <topicref href="topics/g-performing-administrative-tasks-with-pgadmin-iii.xml">
-   <topicref href="topics/g-viewing-a-graphical-query-plan.dita"/>
-  </topicref>
+ <topicref href="topics/g-connecting-with-psql.xml"/> 
+ <topicref href="topics/g-pgadmin-for-greenplum-database.xml">
+  <topicref href="topics/g-installing-pgadmin-for-greenplum-database.xml"/>
+  <topicref href="topics/g-viewing-ddl.xml"/>
  </topicref>
--->
   <topicref href="topics/pgbouncer.xml"/>
  <topicref href="topics/g-database-application-interfaces.xml"/>
  <topicref href="topics/g-troubleshooting-connection-problems.xml"/>
