docs: add GUC gp_ignore_error_table (#4628)
* docs: add GUC gp_ignore_error_table

* docs: updated ditamap for gp_ignore_error_table

* docs: gp_ignore_error_table GUC - updates based on review comments.

--- a/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
+++ b/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
@@ -106,6 +106,7 @@
             <topicref href="guc-list.xml#gp_hadoop_home"/>
             <topicref href="guc-list.xml#gp_hadoop_target_version"/>
             <topicref href="guc-list.xml#gp_hashjoin_tuples_per_bucket"/>
+            <topicref href="guc-list.xml#gp_ignore_error_table"/>
             <topicref href="guc-list.xml#topic_lvm_ttc_3p"/>
             <topicref href="guc-list.xml#gp_interconnect_debug_retry_interval"/>
             <topicref href="guc-list.xml#gp_interconnect_fc_method"/>
