docs: Add guc verify_gpfdists_cert (#4851)
* docs: Add guc verify_gpfdists_cert

-added guc definition to list of gucs
-added link to guc from appropriate topics.

PR for 5X_STABLE
Will be ported to MAIN

* docs:  verify_gpfdists_cert guc updates
-add SSL exceptions that are ignored
-other minor edits

* docs: guc verify_gpfdists_cert - fix typos

--- a/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
+++ b/gpdb-doc/dita/ref_guide/config_params/guc_config.ditamap
@@ -299,6 +299,7 @@
             <topicref href="guc-list.xml#vacuum_cost_page_miss"/>
             <topicref href="guc-list.xml#vacuum_freeze_min_age"/>
             <topicref href="guc-list.xml#validate_previous_free_tid"/>
+            <topicref href="guc-list.xml#verify_gpfdists_cert"/>
             <topicref href="guc-list.xml#vmem_process_interrupt"/>
             <topicref href="guc-list.xml#wal_receiver_status_interval"/>
             <topicref href="guc-list.xml#writable_external_table_bufsize"/>
